Replaced hardcoded text message with label